# nanobot-deep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  constraints.txt  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.example  pyproject.toml
.github/ISSUE_TEMPLATE/: duplicate_messages_investigation.md
.github/workflows/: ci-cd.yml
docker/: README.md  docker-compose.langfuse.yml
docs/: ROADMAP.md  SESSION_SUMMARY.md  TODO.md  telegram-session-problem.md
docs/analysis/: voice-triggered-model-escalation.md
docs/tickets/: 001-deepagents-integration-analysis.md  002-human-in-the-loop-integration.md  003-multi-agent-visibility-and-control.md  004-memory-middleware.md  005-skills-middleware.md  006-mcp-integration.md  007-websearch-tool.md  008-a2a-integration.md  009-streaming-support.md  010-backends-sandboxes.md  011-human-in-the-loop.md  (+16 more)
nanobot_deep/: __init__.py  cli.py  gateway.py
scripts/: auth_telethon.py  create_telegram_group.py  get_telegram_group_id.py
templates/: deepagents.json
tests/: test_backends_factory.py  test_bridge.py  test_cli.py  test_cli_config.py  test_deep_agent.py  test_deep_agent_error_handling.py  test_deepagents_config.py  test_e2e_live_config.py  test_gateway.py  test_interrupt_registry.py  test_langfuse_config.py  test_langgraph_checkpointer.py  test_langgraph_deep_agent_helper.py  test_langgraph_middleware.py  test_model_init.py  test_pypi_compatibility.py  test_sanitizing_checkpointer.py  test_telegram_channel.py  test_telegram_session.py  test_windowing_checkpointer.py
(+38 files in other folders)
